# propel

./: .gitignore  CONTRIBUTING.md  LICENSE-MIT  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vitest.config.ts
.github/workflows/: app-build.yml  publish-components.yml  wasm-build-deploy.yml
apps/studio/: .env.webserver  index.html  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1783681945930-84765ae49444e8.mjs
apps/studio/src/: data-import.ts  index.css  io-kinds.ts  main.tsx  samples.ts  vite-env.d.ts
apps/studio/src/backends/: http.ts  index.ts  tauri.ts  wasm.stub.ts  wasm.ts  wasm.worker.ts
apps/studio/src/panels/: active-datasets.tsx  pipeline-bridge.ts  registry.tsx  types.ts  viewer-registry.ts
apps/studio/src/pipeline/: BackendContext.tsx  index.ts
apps/studio/src/pipeline/components/pipeline/: ArrayNode.tsx  ArtifactNode.tsx  FileImportNode.tsx  FunctionNode.tsx  NodeWrapper.tsx  ObjectNode.tsx  PipelineEditor.tsx  PrimitiveNode.tsx  StructNode.tsx  ViewerOutputNode.tsx  pipeline.css  utils.test.ts  utils.ts
apps/studio/src/pipeline/components/pipeline/editor/: PipelineActionsPanel.tsx  PipelineContextMenu.tsx  PipelineRunPanel.tsx  PipelineSidebar.tsx  graph.test.ts  graph.ts  helpers.test.ts  helpers.ts  schema-catalog.ts  types.ts  usePipelineExecution.ts  usePipelineFiltering.ts
apps/studio/src/pipeline/utils/: SimpleMarkdown.tsx
apps/studio/src/shell/: AppViewerConfig.tsx  ArtifactChipStrip.tsx  BindingViewerPanel.tsx  CommandPalette.tsx  Dashboard.tsx  DatasetChipStrip.tsx  EngineEvents.tsx  GlobalDropOverlay.tsx  ImportButton.tsx  ImportProvider.tsx  KindPickerDialog.tsx  LoadedDialog.tsx  LoadedStrip.tsx  PanelGallery.tsx  SettingsDialog.tsx  SharedRootApp.tsx  TopBar.tsx  WelcomeScreen.tsx  backend-context.ts  backend-singleton.ts  chips.tsx  dockviewApi.ts  import-context.ts  object-colors.ts  platform.ts  theme-context.tsx
apps/studio/src/shell/updater/: UpdateDialog.tsx  UpdaterChip.tsx  useUpdater.ts
apps/studio/src/stores/: artifacts.test.ts  artifacts.ts  datasets.ts  index.ts  preferences.ts
apps/studio/src/transforms/: TransformBuilder.tsx  TransformEditors.tsx  condition-editor.tsx  condition.ts  index.ts
apps/studio/src/viewers/: fitness.ts  index.ts  json-viewer.ts  object-centric-petri-net.ts  registry.test.ts  registry.ts  resolve.ts
apps/studio/src/vis/: _alignment.tsx  _shared.tsx  about.tsx  activity-chart.tsx  alignment-list.tsx  alignment-net.tsx  attribute-analysis.tsx  case-duration.tsx  conformance.tsx  define-vis.tsx  dfg.tsx  dotted-chart.tsx  event-log-editor.tsx  events-per-time.tsx  flatten-ocel.tsx  log-summary.tsx  log-transforms.tsx  log-variants.tsx  object-changes.tsx  oc-declare.tsx  ocdfg.tsx  ocel-counts.tsx  ocel-editor.tsx  ocel-transforms.tsx  ocpn-editor.tsx  petri-editor.tsx  petri-net.tsx  pipeline.tsx  registry.ts  trace-browser.tsx  viewer.tsx
apps/studio/src/vis/components/: DFGPanel.tsx  EventLogEditorPanel.tsx  OCDFGPanel.tsx  OCDeclarePanel.tsx  OcelEditorPanel.tsx  OcpnEditorPanel.tsx  OcpnPanel.tsx  PetriEditorPanel.tsx  PetriNetActions.tsx  PetriNetPanel.tsx  render-graph-svg.ts  save-oc-trace.ts  use-layout-engine.ts
engine/: Cargo.toml  bindings-meta.json
engine/app/: Cargo.toml  tauri.conf.json
engine/app-bindings/: Cargo.toml
engine/app-bindings/src/: alignments.rs  event_log.rs  lib.rs  ocel.rs  petri_net_io.rs  transforms.rs  types.rs
engine/app-bindings/src/viz/: layout.rs  metrics.rs  mod.rs
engine/app/capabilities/: default.json
engine/app/icons/: icon.icns
engine/app/src/: lib.rs  main.rs
engine/backend-shared/: Cargo.toml
engine/backend-shared/.cargo/: config.toml
engine/backend-shared/src/: artifact.rs  lib.rs  meta.rs
engine/meta-gen/: Cargo.toml
engine/meta-gen/src/: main.rs
engine/viz-layout/: Cargo.toml
engine/viz-layout-wasm/: Cargo.toml
engine/viz-layout-wasm/src/: lib.rs
engine/viz-layout/src/: graph_svg.rs  layout.rs  lib.rs  svg_util.rs
engine/wasm/: Cargo.toml  rust-toolchain.toml
engine/wasm/src/: lib.rs  utils.rs
engine/webserver/: Cargo.toml
engine/webserver/src/: main.rs
examples/external-consumer/: index.html  package.json
examples/external-consumer/src/: index.css  main.tsx
scripts/: app-version.mjs  components-version.mjs
