[package]
name = "app-bindings"
version = "0.0.0"
edition = "2021"

[dependencies]
process_mining = {git = "https://github.com/aarkue/rust4pm.git", branch = "feat/register-binding-downstream", features = ["bindings"]}
serde = { version = "1.0.188", features = ["derive"] }
schemars = { version = "1.1.0", features = ["chrono04", "uuid1"] }
rand = { version = "0.9", features = ["small_rng"] }
rayon = "1.7"

[features]
default = ["bindings"]
bindings = ["process_mining/bindings"]
