[package]
name = "propel-tauri"
version = "0.1.2"
description = "propel desktop app"
authors = ["aarkue"]
edition = "2021"

[lib]
# `_lib` suffix keeps the lib name distinct from the bin (Windows cargo quirk).
name = "propel_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
backend-shared = { path = "../backend-shared", features = ["ocel-sqlite"] }
app-bindings = { path = "../app-bindings" }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"

# The updater is desktop-only (no mobile artifacts to sign/serve).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
