[package]
name = "backend-wasm"
version = "0.1.0"
authors = ["aarkue <git@aarkue.eu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
uuid = { version = "1.20", features = ["v4", "serde", "js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
backend-shared = { path = "../backend-shared", features = ["ocel-sqlite"] }
app-bindings = { path = "../app-bindings" }
gloo-utils = { version = "0.2", features = ["serde"] }
erased-serde = "0.4.6"
console_error_panic_hook = { version = "0.1.7", optional = true }

# `app-bindings` pulls in `rand`/`getrandom`; on wasm the `wasm_js` backend
# (selected via `.cargo/config.toml` rustflags) needs this cargo feature enabled.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
