[package]
name = "propel-webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
backend-shared = { path = "../backend-shared", features = ["ocel-sqlite"] }
app-bindings = { path = "../app-bindings" }
